cmake: update scripts for win build

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -3,7 +3,6 @@ cmake_minimum_required(VERSION 3.21)
 include(Kconfig)
 include(ExternalProject)
 include(FetchContent)
-include(FindPkgConfig)
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake;${CMAKE_MODULE_PATH}")
 
@@ -16,8 +15,16 @@ set(SRC_CORE
     ${CMAKE_CURRENT_SOURCE_DIR}/src/time.cpp)
 
 set(CORE_TARGET "core" CACHE INTERNAL "")
-add_library(${CORE_TARGET} ${SRC_CORE})
+add_library(${CORE_TARGET} SHARED ${SRC_CORE})
 set_target_properties(${CORE_TARGET} PROPERTIES VERSION 0.1.0)
+
+if(WIN32)
+    # Link static libs
+    target_link_options(${CORE_TARGET} PRIVATE 
+        "-static-libgcc"
+        "-Wl,--push-state,-Bstatic,-lstdc++,--pop-state"
+        "-Wl,--push-state,-Bstatic,-lwinpthread,--pop-state")
+endif()
 
 kconfig_add_target(${CORE_TARGET})
 add_subdirectory(src)
@@ -39,7 +46,46 @@ core_add_asset_directory(${CMAKE_CURRENT_LIST_DIR}/assets)
 # ##### Threads
 
 find_package(Threads REQUIRED)
-target_link_libraries(${CORE_TARGET} PUBLIC Threads::Threads)
+target_link_libraries(${CORE_TARGET} PRIVATE Threads::Threads)
+
+# ######################################################
+# #### SDL2
+
+find_package(SDL2 REQUIRED)
+if(TARGET SDL2::SDL2)
+    message(STATUS "Found library: SDL2")
+    target_link_libraries(${CORE_TARGET} PRIVATE SDL2::SDL2)
+else()
+    message(FATAL_ERROR "SDL2 not found")
+endif()
+
+# ######################################################
+# ##### SDL2_image
+
+find_package(SDL_image QUIET)
+if(SDL_image_FOUND)
+    message(STATUS "Found library: SDL_image")
+    target_link_libraries(${CORE_TARGET} PRIVATE SDL_image::SDL_image)
+else()
+    find_package(SDL2_image QUIET)
+    if(SDL2_image_FOUND)
+        message(STATUS "Found library: SDL2_image")
+        target_link_libraries(${CORE_TARGET} PRIVATE SDL2_image::SDL2_image)
+    else()
+        message(FATAL_ERROR "SDL2_image not found")
+    endif()
+endif()
+
+# ######################################################
+# ##### SDL2_sound (shared library)
+
+FetchContent_Declare( SDL2_sound_project
+    SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/lib/SDL_sound)
+
+set(SDLSOUND_BUILD_TEST OFF CACHE INTERNAL "")
+
+FetchContent_MakeAvailable(SDL2_sound_project)
+target_link_libraries(${CORE_TARGET} PRIVATE SDL2_sound::SDL2_sound)
 
 # ######################################################
 # ##### easy_profiler (static)
@@ -49,82 +95,55 @@ FetchContent_Declare( easy_profiler_project
 
 set(SDLSOUND_BUILD_TEST OFF CACHE INTERNAL "")
 FetchContent_MakeAvailable(easy_profiler_project)
-target_link_libraries(${CORE_TARGET} PUBLIC $<$<BOOL:$<TARGET_PROPERTY:CONFIG_CORE_PROFILER_ENABLE>>:easy_profiler>)
+target_link_libraries(${CORE_TARGET} PRIVATE $<$<BOOL:$<TARGET_PROPERTY:CONFIG_CORE_PROFILER_ENABLE>>:easy_profiler>)
 
 # ######################################################
 # ##### Assimp
 
-FetchContent_Declare( assimp_project
-    SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/lib/assimp)
+find_package(assimp QUIET)
+if(assimp_FOUND)
+    target_link_libraries(${CORE_TARGET} PRIVATE assimp::assimp)
+else()
+    FetchContent_Declare( assimp_project
+        SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/lib/assimp
+        GIT_REPOSITORY https://github.com/assimp/assimp
+        GIT_TAG v5.2.5
+        UPDATE_DISCONNECTED ON)
 
-set(ASSIMP_BUILD_ALL_EXPORTERS_BY_DEFAULT OFF CACHE INTERNAL "")
-set(ASSIMP_BUILD_TESTS OFF CACHE INTERNAL "")
-set(ASSIMP_INSTALL OFF CACHE INTERNAL "")
-set(ASSIMP_INJECT_DEBUG_POSTFIX OFF CACHE INTERNAL "")
-set(ASSIMP_NO_EXPORT OFF CACHE INTERNAL "")
-set(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF CACHE INTERNAL "")
-set(ASSIMP_BUILD_OBJ_IMPORTER ON CACHE INTERNAL "")
+    set(ASSIMP_BUILD_ALL_EXPORTERS_BY_DEFAULT OFF CACHE INTERNAL "")
+    set(ASSIMP_BUILD_TESTS OFF CACHE INTERNAL "")
+    set(ASSIMP_INSTALL OFF CACHE INTERNAL "")
+    set(ASSIMP_INJECT_DEBUG_POSTFIX OFF CACHE INTERNAL "")
+    set(ASSIMP_NO_EXPORT OFF CACHE INTERNAL "")
+    set(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF CACHE INTERNAL "")
+    set(ASSIMP_BUILD_OBJ_IMPORTER ON CACHE INTERNAL "")
 
-FetchContent_MakeAvailable(assimp_project)
-target_link_libraries(${CORE_TARGET} PUBLIC assimp::assimp)
+    FetchContent_MakeAvailable(assimp_project)
+    target_link_libraries(${CORE_TARGET} PRIVATE assimp::assimp)
+endif()
 
 # ######################################################
 # ##### FreeType
-# find_package(Freetype REQUIRED)
 
-# if(NOT FREETYPE_FOUND)
-#     message(STATUS "Fetching spdlog...")
-#     FetchContent_Declare(
-#         spdlog_project
-#         GIT_REPOSITORY https://github.com/gabime/spdlog.git
-#         GIT_TAG v1.10.0
-#         SOURCE_DIR ${PROJECT_LIBRARY_SOURCE_DIR}/spdlog
-#         UPDATE_DISCONNECTED ON
-#     )
-#     FetchContent_MakeAvailable(spdlog_project)
-# else()
-#     message(STATUS "Found library: Freetype")
-#     message(STATUS "    Library: ${FREETYPE_LIBRARIES}")
-#     message(STATUS "    Include: ${FREETYPE_INCLUDE_DIRS}")
-#     message(STATUS "    Version: ${FREETYPE_VERSION_STRING}")
-# endif()
-
-# target_link_libraries(${CORE_TARGET} PUBLIC Freetype::Freetype)
-
-
-pkg_check_modules(Freetype2_lib REQUIRED IMPORTED_TARGET freetype2)
-
-if(Freetype2_lib_FOUND)
-    message(STATUS "Found library: Freetype2")
-    message(STATUS "    Library: ${Freetype2_lib_LIBRARIES}")
-    message(STATUS "    Link:    ${Freetype2_lib_LINK_LIBRARIES}")
-    message(STATUS "    Include: ${Freetype2_lib_INCLUDE_DIRS}")
-    message(STATUS "    Version: ${Freetype2_lib_VERSION}")
+find_package(Freetype REQUIRED)
+if(Freetype_FOUND)
+    message(STATUS "Found Freetype")
 else()
-    message(FATAL_ERROR "Freetype2 not found")
+    message(FATAL_ERROR "Freetype not found")
 endif()
-target_link_libraries(${CORE_TARGET} PUBLIC PkgConfig::Freetype2_lib)
+target_link_libraries(${CORE_TARGET} PRIVATE Freetype::Freetype)
 
 # ######################################################
 # ##### JSON
-find_package(nlohmann_json QUIET)
 
-if(NOT nlohmann_json_FOUND)
-    message(STATUS "Fetching nlohmann_json...")
-    FetchContent_Declare(
-        nlohmann_json_project
-        GIT_REPOSITORY https://github.com/nlohmann/json.git
-        GIT_TAG v3.11.2
-        GIT_SHALLOW TRUE
-        SOURCE_DIR ${PROJECT_LIBRARY_SOURCE_DIR}/json
-        UPDATE_DISCONNECTED ON
-    )
-    FetchContent_MakeAvailable(nlohmann_json_project)
-else()
+find_package(nlohmann_json QUIET)
+if(nlohmann_json_FOUND)
     message(STATUS "Found nlohmann_json: ${nlohmann_json_VERSION}")
+    target_link_libraries(${CORE_TARGET} PRIVATE nlohmann_json::nlohmann_json)
+else()
+    message(FATAL_ERROR "Library not found: nlohmann_json")
 endif()
 
-target_link_libraries(${CORE_TARGET} PUBLIC nlohmann_json::nlohmann_json)
 
 # ######################################################
 # ##### libfmt
@@ -141,102 +160,54 @@ target_link_libraries(${CORE_TARGET} PUBLIC fmt::fmt)
 # ######################################################
 # ##### spdlog
 
-find_package(spdlog QUIET)
-if(spdlog_FOUND)    
-    message(STATUS "Found spdlog: ${spdlog_VERSION}")
-    target_link_libraries(${CORE_TARGET} PUBLIC $<$<BOOL:$<TARGET_PROPERTY:CONFIG_CORE_LOG_ENABLE>>:spdlog>)
+FetchContent_Declare( spdlog_project
+    SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/lib/spdlog)
+
+set(SPDLOG_BUILD_BENCH OFF CACHE INTERNAL "")
+set(SPDLOG_BUILD_EXAMPLE OFF CACHE INTERNAL "")
+set(SPDLOG_BUILD_TESTS OFF CACHE INTERNAL "")
+if(TARGET fmt::fmt)
+    set(SPDLOG_FMT_EXTERNAL ON CACHE INTERNAL "")
 else()
-    FetchContent_Declare( spdlog_project
-        SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/lib/spdlog
-        GIT_REPOSITORY https://github.com/gabime/spdlog
-        GIT_BRANCH v1.x
-        GIT_SHALLOW ON
-        UPDATE_DISCONNECTED ON)
-
-    set(SPDLOG_BUILD_BENCH OFF CACHE INTERNAL "")
-    set(SPDLOG_BUILD_EXAMPLE OFF CACHE INTERNAL "")
-    set(SPDLOG_BUILD_TESTS OFF CACHE INTERNAL "")
-    if(TARGET fmt::fmt)
-        set(SPDLOG_FMT_EXTERNAL ON CACHE INTERNAL "")
-    else()
-        set(SPDLOG_FMT_EXTERNAL OFF CACHE INTERNAL "")
-    endif()
-
-    FetchContent_MakeAvailable(spdlog_project)
-    target_link_libraries(${CORE_TARGET} PUBLIC $<$<BOOL:$<TARGET_PROPERTY:CONFIG_CORE_LOG_ENABLE>>:spdlog::spdlog>)
+    set(SPDLOG_FMT_EXTERNAL OFF CACHE INTERNAL "")
 endif()
 
-
-# ######################################################
-# #### SDL2
-
-find_package(SDL2 QUIET)
-if(TARGET SDL2::SDL2)
-    message(STATUS "Found library: SDL2")
-    target_link_libraries(${CORE_TARGET} PUBLIC SDL2::SDL2)
-else()
-    # Try pkg config
-    pkg_search_module(SDL2_lib REQUIRED sdl2 IMPORTED_TARGET)
-    if(SDL2_lib_FOUND)
-        target_link_libraries(${CORE_TARGET} PUBLIC PkgConfig::SDL2_lib)
-    else()
-        message(FATAL_ERROR "SDL2 not found")
-    endif()
-endif()
-
-# ######################################################
-# ##### SDL2_image
-
-find_package(SDL_image QUIET)
-if(TARGET SDL_image::SDL_image)
-    message(STATUS "Found library: SDL_image")
-    target_link_libraries(${CORE_TARGET} PUBLIC SDL_image::SDL_image)
-else()
-    find_package(SDL2_image REQUIRED)
-    # pkg_search_module(SDL2_image_lib REQUIRED SDL2_image IMPORTED_TARGET)
-    if(TARGET SDL2_image::SDL2_image)
-        message(STATUS "Found library: SDL2_image")
-        target_link_libraries(${CORE_TARGET} PUBLIC SDL2_image::SDL2_image)
-    else()
-        message(FATAL_ERROR "SDL2_image not found")
-    endif()
-endif()
-
-# ######################################################
-# ##### SDL2_sound (shared library)
-
-FetchContent_Declare( SDL2_sound_project
-    SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/lib/SDL_sound)
-
-set(SDLSOUND_BUILD_TEST OFF CACHE INTERNAL "")
-
-FetchContent_MakeAvailable(SDL2_sound_project)
-target_link_libraries(${CORE_TARGET} PUBLIC SDL2_sound::SDL2_sound)
+FetchContent_MakeAvailable(spdlog_project)
+target_link_libraries(${CORE_TARGET} PUBLIC $<$<BOOL:$<TARGET_PROPERTY:CONFIG_CORE_LOG_ENABLE>>:spdlog::spdlog>)
 
 # ######################################################
 # ##### OpenAL-soft
 
-FetchContent_Declare( openal_soft_project
-    SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/lib/openal-soft)
+find_package(OpenAL QUIET)
+if(OpenAL_FOUND)
+    target_link_libraries(${CORE_TARGET} PRIVATE OpenAL::OpenAL)
+else()
+    FetchContent_Declare( openal_soft_project
+        SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/lib/openal-soft
+        GIR_REPOSITORY https://github.com/kcat/openal-soft
+        GIT_TAG 1.22.2
+        UPDATE_DISCONNECTED OFF)
 
-set(ALSOFT_EXAMPLES OFF CACHE INTERNAL "")
-set(ALSOFT_UTILS OFF CACHE INTERNAL "")
-set(ALSOFT_INSTALL_EXAMPLES OFF CACHE INTERNAL "")
-set(ALSOFT_INSTALL_UTILS OFF CACHE INTERNAL "")
-set(ALSOFT_NO_CONFIG_UTIL OFF CACHE INTERNAL "")
-set(ALSOFT_STATIC_LIBGCC`ON CACHE INTERNAL "")
-set(ALSOFT_STATIC_STDCXX`ON CACHE INTERNAL "")
-set(ALSOFT_STATIC_WINPTHREAD ON CACHE INTERNAL "")
-if(UNIX)
+    set(LIBTYPE SHARED CACHE INTERNAL "")
+    set(ALSOFT_EXAMPLES OFF CACHE INTERNAL "")
+    set(ALSOFT_UTILS OFF CACHE INTERNAL "")
+    set(ALSOFT_INSTALL_EXAMPLES OFF CACHE INTERNAL "")
+    set(ALSOFT_INSTALL_UTILS OFF CACHE INTERNAL "")
+    set(ALSOFT_NO_CONFIG_UTIL OFF CACHE INTERNAL "")
+    set(ALSOFT_RTKIT OFF CACHE INTERNAL "")
+    # set(ALSOFT_STATIC_LIBGCC`ON CACHE INTERNAL "")
+    # set(ALSOFT_STATIC_STDCXX`ON CACHE INTERNAL "")
+    # set(ALSOFT_STATIC_WINPTHREAD ON CACHE INTERNAL "")
+    # if(UNIX)
 
-elseif(WIN32)
-    set(ALSOFT_BUILD_ROUTER ON CACHE INTERNAL "")
-    set(ALSOFT_REQUIRE_WASAPI ON CACHE INTERNAL "")
+    # elseif(WIN32)
+    #     set(ALSOFT_BUILD_ROUTER ON CACHE INTERNAL "")
+    #     set(ALSOFT_REQUIRE_WASAPI ON CACHE INTERNAL "")
+    # endif()
+
+    FetchContent_MakeAvailable(openal_soft_project)
+    target_link_libraries(${CORE_TARGET} PRIVATE OpenAL::OpenAL)
 endif()
-set(LIBTYPE SHARED CACHE INTERNAL "")
-
-FetchContent_MakeAvailable(openal_soft_project)
-target_link_libraries(${CORE_TARGET} PUBLIC OpenAL::OpenAL)
 
 # ######################################################
 # ##### Vulkan
@@ -246,24 +217,17 @@ if(NOT Vulkan_FOUND)
     message(WARNING "Vulkan not found")
 endif()
 
-target_link_libraries(${CORE_TARGET} PUBLIC $<$<BOOL:$<TARGET_PROPERTY:CONFIG_CORE_RENDERER_VULKAN>>:Vulkan::Vulkan>)
+target_link_libraries(${CORE_TARGET} PRIVATE $<$<BOOL:$<TARGET_PROPERTY:CONFIG_CORE_RENDERER_VULKAN>>:Vulkan::Vulkan>)
 
 # ######################################################
 # ##### glm
-find_package(glm QUIET)
-if(TARGET glm::glm)
-    message(STATUS "Found library: SDL2")
-    target_link_libraries(${CORE_TARGET} PUBLIC glm::glm)
+find_package(glm REQUIRED)
+if(TARGET glm)
+    message(STATUS "Found library: glm")
+    target_link_libraries(${CORE_TARGET} PUBLIC glm)
 else()
-    # Try pkg config
-    pkg_search_module(glm_lib REQUIRED glm IMPORTED_TARGET)
-    if(glm_lib_FOUND)
-        target_link_libraries(${CORE_TARGET} PUBLIC PkgConfig::glm_lib)
-    else()
-        message(FATAL_ERROR "glm not found")
-    endif()
+    message(FATAL_ERROR "glm not found")
 endif()
-
 
 # ######################################################
 # ##### OpenGL
@@ -273,7 +237,7 @@ if(NOT OpenGL_FOUND)
     message(WARNING "OpenGL not found")
 endif()
 
-target_link_libraries(${CORE_TARGET} PUBLIC $<$<BOOL:$<TARGET_PROPERTY:CONFIG_CORE_RENDERER_OPENGL>>:OpenGL::GL>)
+target_link_libraries(${CORE_TARGET} PRIVATE $<$<BOOL:$<TARGET_PROPERTY:CONFIG_CORE_RENDERER_OPENGL>>:OpenGL::GL>)
 
 # ######################################################
 # ##### GLEW
@@ -286,23 +250,15 @@ else()
     message(FATAL_ERROR "GLEW not found")
 endif()
 
-target_link_libraries(${CORE_TARGET} PUBLIC $<$<BOOL:$<TARGET_PROPERTY:CONFIG_CORE_RENDERER_OPENGL>>:GLEW::glew>)
-
-# ######################################################
-# ##### libfmt
-
-# find_package(fmt REQUIRED)
-# if(fmt_FOUND)
-#     message(STATUS "Found library: fmt")
-#     message(STATUS "    Version: ${fmt_VERSION}")
-# else()
-#     message(FATAL_ERROR "fmt not found")
-# endif()
-# target_link_libraries(${CORE_TARGET} PUBLIC fmt::fmt)
+target_link_libraries(${CORE_TARGET} PRIVATE $<$<BOOL:$<TARGET_PROPERTY:CONFIG_CORE_RENDERER_OPENGL>>:GLEW::glew>)
 
 # #####################################################
-# Post-commands
+# Install rules
 
+install(TARGETS ${CORE_TARGET}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 
 # #####################################################
 # Tests
