vscode: set task type to shell

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,7 @@
             "miDebuggerPath": "C:\\msys64\\ucrt64\\bin\\gdb.exe",
             "cwd": "${workspaceFolder}\\build\\win64\\logic",
             "program": "${workspaceFolder}\\build\\win64\\logic\\sample.exe",
+            "preLaunchTask": "Rebuild:win64"
         },
     ],
     "inputs": [
